[gd_scene format=3 uid="uid://xtskqoa2xss7"]

[ext_resource type="Script" uid="uid://csjmlwlvrenus" path="res://scripts/ui/main_menu.gd" id="1_fe2o3"]
[ext_resource type="PackedScene" uid="uid://dqc5etqao77qp" path="res://scenes/main_game.tscn" id="2_1g8jr"]
[ext_resource type="PackedScene" uid="uid://c2qghk8ky651o" path="res://scenes/ui/settings_menu.tscn" id="3_1g8jr"]

[node name="MainMenu" type="Control" unique_id=1071670525]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fe2o3")
game_scene = ExtResource("2_1g8jr")
metadata/_edit_group_ = true

[node name="MainMenuContainer" type="CenterContainer" parent="." unique_id=801739998]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuContainer" unique_id=436446471]
layout_mode = 2

[node name="StartButton" type="Button" parent="MainMenuContainer/VBoxContainer" unique_id=1486342720]
layout_mode = 2
text = "Start"

[node name="SettingsButton" type="Button" parent="MainMenuContainer/VBoxContainer" unique_id=178586489]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="MainMenuContainer/VBoxContainer" unique_id=1675307245]
layout_mode = 2
text = "Quit"

[node name="SettingsMenu" parent="." unique_id=1325957341 instance=ExtResource("3_1g8jr")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MainMenuContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MainMenuContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MainMenuContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="back_pressed" from="SettingsMenu" to="." method="_on_settings_menu_back_pressed"]
